<resources>
    <string name="app_name">APL USAID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="perfilador_linguistico">Perfilador Linguistico</string>
    <string name="gramatica">Gramatica</string>
    <string name="sonidos_especificos">Sonidos Especificos</string>
    <string name="vocabulario">Vocabulario</string>
    <string name="creditos">Creditos</string>
    <string name="expresionoral">Expresion Oral</string>
    <string name="guia_comprension_oral">Guia Comprension Oral</string>
    <string name="guia_expresion_oral">Guia Expresion Oral</string>
    <string name="guia_gramatica">Guia Gramatica</string>
    <string name="guia_interaccion_oral">Guia Interaccion Oral</string>
    <string name="guia_precicion_oral">Guia Precision Oral</string>
    <string name="guia_sonidos_especificos">Guia Sonidos Especificos</string>
    <string name="guia_vocabulario">Guia Vocabulario Producción</string>
    <string name="Tit_EspQui_SerA">ETAB’AL K’ICHE XUQUJE KAXLAN CH’AB’AL KECH \n AJTIJOXELAB’ RE NAB’E TAQ JUNAB’ PA TIJOB’AL \n PERFIL LINGÜÍSTICO ORAL DE ESTUDIANTES DE PRIMARIA Y PRIMER GRADO DE PRIMARIA \n K’ICHE’ – ESPAÑOL</string>
    <string name="Ins_Esp_Qui_SerA">A. JASTAQ RECH RI AJTIJOXEL XUQUJE RE RI TIJOB’AL \n DATOS DEL ESTABLECIMIENTO Y DEL ESTUDIANTE</string>
    <string name="Pre1_EspQui_SerA">1.	Ub’il ajtijoxel / Nombre del estudiante:</string>
    <string name="Pre2_EspQui_SerA">2.	Ak’al ali / Niña</string>
    <string name="Pre2.1_EspQui_SerA_2.1">Ak’al ala / Niño</string>
    <string name="Pre3_EspQui_SerA">3.	Ujunab’ / Edad</string>
    <string name="Pr4_EspQui_SerA">4.	Junab’ tijonik / Grado:</string>
    <string name="Pr5_EspQui_SerA">5.	Tijob’al / Escuela:</string>
    <string name="Pr6_EspQui_SerA">6.	Rajilab’al tijob’al / Código de la escuela:</string>
    <string name="Pr7_EspQui_SerA">7.	La’j tinimit / Municipio:</string>
    <string name="Pr8_EspQui_SerA">8.	Nim Tinimit / Departamento:</string>
    <string name="Pre9_EspQui_SerA">9.	Tanaj tijoxik / Ciclo escolar:</string>
    <string name="Ins_EspQui_SerA_CodEva">Rajilab’al re etab’alil / Código de evaluación</string>
    <string name="Tit_EspQui_SerB">B.	K’OTB’AL CHI’ KECH TAT, NAN WENE AJCHAJINELAB’ RE JUJA WINAQ\nENTREVISTA A PADRES O ENCARGADO/A DE ESTUDIANTES\nUSO DE IDIOMA EN EL CONTEXTO FAMILIAR</string>
    <string name="Inst_EspQui_SerB">Winaq xk’ot uchi’ / Persona entrevistada</string>
    <string name="Pre1_EspQui_SerB">Ajchajinel / Encargado:</string>
    <string name="Pre2_EspQui_SerB">Ujunab’ / Edad:</string>
    <string name="Pre3_EspQui_SerB">Uchak / Ocupación</string>
    <string name="Pre4_EspQui_SerB">Janipa’ le alk’walaxel pa jawinaq \nNúmero de hijos en la familia</string>
    <string name="Pre5_EspQui_SerB">Jachike uk’olib’al le walaxel chikixo’l rachalal \n ¿Cuál es la posición del estudiante entre el número de hijos/as?</string>
    <string name="Pre6_EspQui_SerB">La kutijoj rib’ kuk’ tat, nan / \nParticipa en Aula para padres: </string>
    <string name="Si_EspQui">Je’ / Si:</string>
    <string name="No_EspQui">Je’ taj / No</string>
    <string name="Ent_EspQui">Kuch’ob’o \nEntiende</string>
    <string name="Hab_EspQui">Kuch’ab’ej \nHabla</string>
    <string name="Lee_EspQui">Kusik’ij uwach \nLee</string>
    <string name="Esc_EspQui">Kutz’ib’aj \nEscribe</string>
    <string name="NoSabe_EspQui">Reta’m taj \nNo sabe</string>
    <string name="Pad_EspQui">Tat / Padre</string>
    <string name="Mad_EspQui">Nan / Madre</string>
    <string name="Enc_EspQui">Chajinel / Encargado/a</string>
    <string name="Qui_EspQui">K’iche / Quiché</string>
    <string name="Esp_EspQui">Kaxlantzij / Español</string>
    <string name="Ins_EspQui_SerB2">Jachike ch’ab’al kach’aw wi (are kuterenej ri xub’ij ri winaq ixk’ot uchi’).\nIdiomas que dominan (información proporcionada por la persona entrevistada).</string>
    <string name="FamComFre_EspQui_QUI">Jachike ch’ab’al kukoj amaq’el juja winaq are k’o pa: \nLa familia, ¿en qué idioma se comunica con más frecuencia?</string>
    <string name="Pre1_EspQui_SerB_Tab2">Achoch \nEn la casa.</string>
    <string name="Pre2_EspQui_SerB_Tab2">Mulin ib’ kuk’ taq rachalal \nCuando se reúnen con otros familiares</string>
    <string name="Pre3_EspQui_SerB_Tab2">Mulin ib’ kuk taq rach ch’ab’en. \nCuando se reúnen con amigos.</string>
    <string name="Pre4_EspQui_SerB_Tab2">K’ayib’al. \n En el mercado.</string>
    <string name="Pre5_EspQui_SerB_Tab2">Pa taq tyox. \n En actividades religiosas</string>
    <string name="Pre6_EspQui_SerB_Tab2">Taq chak re tijob’al. \nEn actividades de la escuela</string>
    <string name="Pre7_EspQui_SerB_Tab2">Taq’ chak re komon. \n En actividades de la comunidad</string>
    <string name="TOTAL">TOTAL</string>
    <string name="Ins_EspQui_SerB3">Rech ri ajtijoxel.\nCon relación al estudiante.</string>
    <string name="Tit_Tab3_EspQui_SerB_Qui">Jachike ch’ab’al amaq’el kukoj ri ajtijoxel are (Kab’ij ub’I’ le alk’ walaxel): \Indique que idioma usa su hijo/a (nombre del estudiante) con más frecuencial al:</string>
    <string name="Pre8_EspQui_SerB_Tab2">Kab’ixonik \nCantar</string>
    <string name="Pre9_EspQui_SerB_Tab2">Ketz’anik xaq utukel \n Jugar solo(a).</string>
    <string name="Pre10_EspQui_SerB_Tab2">Kach’awik ketz’anik kuk’ taq rachalal \n Hablar/Jugar con sus hermanos/as.</string>
    <string name="Pre11_EspQui_SerB_Tab2">Katzijonik kuk’ taq rach ch’ab’en \n Hablar/Jugar con sus amigos/as</string>
    <string name="Pre12_EspQui_SerB_Tab2">Katzijonik kuk’ ta nima’q taq winaq (kitat, kinanm nik’aj chik) \n Hablar con sus mayores (padres, abuelos, etc).</string>
    <string name="Observaciones_EspQui">Nik’aj taq no’j chik / Observaciones:</string>
    <string name="Entrevistador_EspQui">Winaq ajk’otb’al chi’ / Entrevistador(a):</string>
    <string name="Cargp_EspQui">Raqalcn / cargo:</string>
    <string name="Docente_EspQui">Ajtik / Docente:</string>
    <string name="Director_EspQui">K’amalb’e re tijob’al / Director(a):</string>
    <string name="Otro_EspQui">Junchik / Otro:</string>
    <string name="Fecha_EspQui">Qijil / Fecha:</string>
    <string name="Tit_EspQui_SerC">C.	K’OTA’AL CHI’ RECH AJTIJOXEL\nENTREVISTA PARA EL / LA ESTUDIANTE</string>
    <string name="Pre1_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ anan: \nCuando habla con su mamá lo hace en:</string>
    <string name="Pre2_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ a tat: \nCuando habla con su papá lo hace en:</string>
    <string name="Pre3_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ awachalal alab’om: \nCon sus hermanos habla en:</string>
    <string name="Pre4_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’al alitom: \nCon sus hermanas hablan en</string>
    <string name="Pre5_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ await’t, amam: \nCon sus abuelos y abuela habla en:</string>
    <string name="Pre6_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ awikan: \nCon sus tíos y tías habla en:</string>
    <string name="Pre7_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ awach ch’ab’en: \nCon sus amigos y amigas se comunica en:</string>
    <string name="Pre8_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ awach ch’ab’en: \nCon sus amigos y amigas se comunica en:</string>
    <string name="Pre9_EspQui_SerC">Jachike ch’ab’al kakojo are katzijon kuk’ nima’q taq ak’alab’: \nCon los niños o niñas mas grandes se comunica en:</string>
    <string name="Pre10_EspQui_SerC">Jachike ch’ab’al kakojo are kariq jun winaq aweta’m taj uwach: \nSi encuentra a una persona que nonoce, le habla en:</string>
    <string name="Idioma_referencia_en_la_escuela">CH’AB’AL UTZ UTAYIK. UKOJIK PA TIJOB’AL \nIDIOMA DE PREFERENCIA PARA COMUNICARSE EN ESCUELA</string>
    <string name="Pre_EspQui_SerC_Pre11">Chi awach jackike ch’ab’al utz ukojik are katzijon kuk’ awajtij: \nCon su maestra o maestro le gustaría hablar más en:</string>
    <string name="Pre_EspQui_SerC_Pre12">Jachike ch’ab’al utz utayik xuquj’e uch’ab’exik awumal patijob’al: \nEn la escuela le gustaría hablar más en:</string>
    <string name="Tit_EspQui_SerD">D. RETAB’ALIL KICH’AB’AL K’ICHE’ KECH AJTIJOXELAB’\nEVALUACIÓN DIAGNÓSTICA DE ESTUDIANTES – K’ICHE’</string>
    <string name="Ins_EspQui_SerD2">Chak’ama’ ub’eyal le kab’ix chawe kajuch’u kicholaj are kakojo ri kutzalij ub’ixik le ajtijoxel.
        /\nSiga las instrucciones que están en la guía de aplicación y marque en cada serie según sea la respuesta del estudiante.
    </string>
    <string name="RespuestaCorrecta_EspQui">Utz tzlim tzik \nRespuesta correcta</string>
    <string name="Pre1_EspQui_SerD_TabI">¿Jas ab’i’ / su ri ab’i’?</string>
    <string name="Pre2_EspQui_SerD_TabI">¿Janipa ajunab’?</string>
    <string name="Pre3_EspQui_SerD_TabI">¿Jas / su ib’i ri anan?</string>
    <string name="Pre4_EspQui_SerD_TabI">¿Jachike rikil utz kana’ utijik?</string>
    <string name="Pre5_EspQui_SerD_TabI">¿Jachike etz’anem utz kaqaj chawach?</string>
    <string name="expresion_oran_kiche">II.	CHOLAJ. UCH’OB’IK TZIJOB’AL / COMPRENSIÓN ORAL</string>
    <string name="Pre1_EspQui_SerD_TabII">Chachapa le atza’m.</string>
    <string name="Pre2_EspQui_SerD_TabII">Chayaka le aq’ab’.</string>
    <string name="Pre3_EspQui_SerD_TabII">Chaqasaj le aq’ab’.</string>
    <string name="Pre4_EspQui_SerD_TabII">Chatwajiloq.</string>
    <string name="Pre5_EspQui_SerD_TabII">Chatsutin jumul.</string>
    <string name="VocabularioPrecision_EspQui_SerD">III.	CHOLAJ. TAQ TZIJ (K’YAQALIK) / VOCABULARION (PRECISIÓN)</string>
    <string name="Pre1_EspQui_SerD_TabIII">Tat</string>
    <string name="Pre2_EspQui_SerD_TabIII">Nan</string>
    <string name="Pre3_EspQui_SerD_TabIII">Ali</string>
    <string name="Pree_EspQui_SerD_TabIII">Ti’t</string>
    <string name="Pre5_EspQui_SerD_TabIII">Mam</string>
    <string name="Pre6_EspQui_SerD_TabIII">Aq</string>
    <string name="Pre7_EspQui_SerD_TabIII">Imul</string>
    <string name="Pre8_EspQui_SerD_TabIII">Chij</string>
    <string name="Pre9_EspQui_SerD_TabIII">Pix</string>
    <string name="Pre10_EspQui_SerD_TabIII">Aj</string>
    <string name="Pre11_EspQui_SerD_TabIII">Oj</string>
    <string name="Pre12_EspQui_SerD_TabIII">Wuj</string>
    <string name="Pre13_EspQui_SerD_TabIII">Tijob’al</string>
    <string name="Pre14_EspQui_SerD_TabIII">Tem</string>
    <string name="Pre15_EspQui_SerD_TabIII">Pas</string>
    <string name="Pre16_EspQui_SerD_TabIII">Uq</string>
    <string name="aspecto_a_evaluar_kiche">Jastaq / Aspectos</string>
    <string name="para_terminar">Para terminar...</string>
    <string name="despu_s_paso_que">Después paso que...</string>
    <string name="en_un_lugar_de">En un lugar de...</string>
    <string name="pronuncia_correctamente_las_palabras_que_utiliza">Pronuncia correctamente las palabras que utiliza.</string>
    <string name="se_mantiene_en_el_tema_de_conversaci_n">Se mantiene en el tema de conversación.</string>
    <string name="organiza_secuencialmente_sus_ideas_al_expresarse">Organiza secuencialmente sus ideas al expresarse.</string>
    <string name="se_expresa_con_claridad_en_la_conversaci_n">Se expresa con claridad en la conversación.</string>
    <string name="pronuncia_correctamente_las_palabras_que_utiliza_kiche">Utz ub’ixik taq le tzij kukojo.</string>
    <string name="se_mantiene_en_el_tema_conversacion_kiche">Kuk’ex taj uk’ux ri kutzijoj.</string>
    <string name="si_kiche">Je’ / Sí</string>
    <string name="no_kiche">Je’ taj /No</string>
    <string name="organiza_secuencialmente_sus_idea_al_expresarse_kiche">Kuchol ronojel ri uno’j are katzijonik.</string>
    <string name="se_expresa_con_claridad_en_la_conversacion_kiche">Kach’ob’otajik ri utzijob’al</string>
</resources>