<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.kiche.ExpresionOralKiche">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\nVII. CHOLAJ. UCH’AB’EXIK / EXPRESIÓN ORAL\n"
        android:textAlignment="center"
        android:textSize="@dimen/_13sdp" />


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvEvaExpresionOralKiche"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:textAlignment="center"
        card_view:cardBackgroundColor="@android:color/white">

        <ViewFlipper
            android:id="@+id/vfEvaExpresionOralKiche"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rlGuiaExpresionOralKiche1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ub'eyal / Instrucciones\nSe creara una histroria por cada dibujo"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="¿Qué ve en este dibujo?"
                    android:textAlignment="center"
                    android:textSize="@dimen/_11sdp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/book"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlGuiaExpresionOralKiche2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aspecto_a_evaluar_kiche"
                    android:textAlignment="center"
                    android:textSize="@dimen/_15sdp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/pregunta1"
                    android:layout_width="1000dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <ImageView
                            android:id="@+id/ivPregunta1"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="16dp"
                            android:src="@mipmap/book" />
                        <TextView
                            android:id="@+id/tvPregunta1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/ivPregunta1"
                            android:text="@string/pronuncia_correctamente_las_palabras_que_utiliza_kiche"
                            android:textSize="@dimen/_13sdp" />
                        <TextView
                            android:id="@+id/person_age2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvPregunta1"
                            android:layout_toRightOf="@+id/ivPregunta1"
                            android:text="@string/pronuncia_correctamente_las_palabras_que_utiliza"/>
                        <RadioGroup
                            android:layout_width="200dp"
                            android:layout_height="90dp"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true">
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/si_kiche"
                                android:id="@+id/RespSiPregunta1"/>
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/no_kiche"
                                android:id="@+id/RespNoPregunta1"/>
                        </RadioGroup>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/pregunta2"
                    android:layout_width="1000dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <ImageView
                            android:id="@+id/ivPregunta2"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="16dp"
                            android:src="@mipmap/book" />
                        <TextView
                            android:id="@+id/tvPregunta2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/ivPregunta2"
                            android:text="@string/se_mantiene_en_el_tema_conversacion_kiche"
                            android:textSize="@dimen/_13sdp" />
                        <TextView
                            android:id="@+id/person_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvPregunta2"
                            android:layout_toRightOf="@+id/ivPregunta2"
                            android:text="@string/se_mantiene_en_el_tema_de_conversaci_n"/>
                        <RadioGroup
                            android:layout_width="200dp"
                            android:layout_height="90dp"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true">
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/si_kiche"
                                android:id="@+id/RespSiPregunta2"/>
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/no_kiche"
                                android:id="@+id/RespNoPregunta2"/>
                        </RadioGroup>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/pregunta3"
                    android:layout_width="1000dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <ImageView
                            android:id="@+id/ivPregunta3"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="16dp"
                            android:src="@mipmap/book" />
                        <TextView
                            android:id="@+id/tvPregunta3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/ivPregunta3"
                            android:text="@string/organiza_secuencialmente_sus_idea_al_expresarse_kiche"
                            android:textSize="@dimen/_13sdp" />
                        <TextView
                            android:id="@+id/person_age3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvPregunta3"
                            android:layout_toRightOf="@+id/ivPregunta3"
                            android:text="@string/organiza_secuencialmente_sus_ideas_al_expresarse"/>
                        <RadioGroup
                            android:layout_width="200dp"
                            android:layout_height="90dp"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true">
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/si_kiche"
                                android:id="@+id/RespSiPregunta3"/>
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/no_kiche"
                                android:id="@+id/RespNoPregunta3"/>
                        </RadioGroup>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/pregunta4"
                    android:layout_width="1000dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <ImageView
                            android:id="@+id/ivPregunta4"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="16dp"
                            android:src="@mipmap/book" />
                        <TextView
                            android:id="@+id/tvPregunta4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/ivPregunta4"
                            android:text="@string/se_expresa_con_claridad_en_la_conversacion_kiche"
                            android:textSize="@dimen/_13sdp" />
                        <TextView
                            android:id="@+id/person_age4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvPregunta4"
                            android:layout_toRightOf="@+id/ivPregunta4"
                            android:text="@string/se_expresa_con_claridad_en_la_conversaci_n"/>
                        <RadioGroup
                            android:layout_width="200dp"
                            android:layout_height="90dp"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true">
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/si_kiche"
                                android:id="@+id/RespSiPregunta4"/>
                            <RadioButton
                                android:layout_width="100dp"
                                android:layout_height="90dp"
                                android:text="@string/no_kiche"
                                android:id="@+id/RespNoPregunta4"/>
                        </RadioGroup>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlGuiaExpresionOral3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/para_terminar"
                    android:textAlignment="center"
                    android:textSize="@dimen/_11sdp" />

                <ImageView
                    android:layout_width="1000dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="25dp"
                    android:src="@mipmap/book" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlGuiaExpresionOral4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/despu_s_paso_que"
                    android:textAlignment="center"
                    android:textSize="@dimen/_11sdp" />

                <ImageView
                    android:layout_width="1000dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="25dp"
                    android:src="@mipmap/book" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlGuiaExpresionOral5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/en_un_lugar_de"
                    android:textAlignment="center"
                    android:textSize="@dimen/_11sdp" />

                <ImageView
                    android:layout_width="1000dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="25dp"
                    android:src="@mipmap/book" />


            </LinearLayout>

        </ViewFlipper>
    </android.support.v7.widget.CardView>
</LinearLayout>